<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.yeelin.homework2.h312yeelin.fragment.CurrentWeatherAndDailyForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/current_weather_fragment_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/current_image"
                    android:layout_width="@dimen/weather_image_size"
                    android:layout_height="@dimen/weather_image_size"
                    android:contentDescription="@string/weather_image_contentDescription"
                    android:src="@color/colorAccent"/>

                <TextView
                    android:id="@+id/current_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/current_weather_inner_margin"
                    android:layout_marginStart="@dimen/current_weather_inner_margin"
                    android:layout_toRightOf="@id/current_image"
                    android:layout_toEndOf="@id/current_image"
                    android:layout_centerVertical="true"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/current_description_default_value"
                    tools:text="Scattered clouds"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/xlarge_textSize"
                android:textColor="@color/textColorPrimary"
                android:text="@string/current_temp_default_value"
                tools:text="65"/>

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:useDefaultMargins="false"
                app:alignmentMode="alignMargins"
                app:columnOrderPreserved="false"
                app:columnCount="@integer/current_weather_columnCount"
                app:orientation="horizontal">

                <TextView
                    app:layout_row="0"
                    app:layout_column="0"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/current_humidity_label"/>

                <TextView
                    android:id="@+id/current_humidity"
                    app:layout_row="0"
                    app:layout_column="1"

                    android:layout_marginLeft="@dimen/current_weather_inner_margin"
                    android:layout_marginStart="@dimen/current_weather_inner_margin"

                    android:textColor="@color/textColorSecondary"
                    android:text="@string/current_humidity_default_value"
                    tools:text="50 %"/>

                <TextView
                    app:layout_row="1"
                    app:layout_column="0"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/current_windspeed_label"/>

                <TextView
                    android:id="@+id/current_wind_speed"
                    app:layout_row="1"
                    app:layout_column="1"

                    android:layout_marginLeft="@dimen/current_weather_inner_margin"
                    android:layout_marginStart="@dimen/current_weather_inner_margin"

                    android:textColor="@color/textColorSecondary"
                    android:text="@string/current_windspeed_default_value"
                    tools:text="5 mps"/>

            </android.support.v7.widget.GridLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/daily_forecast_listview_height"
            android:layout_marginLeft="@dimen/current_weather_fragment_margin"
            android:layout_marginStart="@dimen/current_weather_fragment_margin"
            android:layout_marginRight="@dimen/current_weather_fragment_margin"
            android:layout_marginEnd="@dimen/current_weather_fragment_margin">

            <ProgressBar
                android:id="@+id/daily_forecast_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/progressBarStyle"
                android:visibility="gone"/>

            <FrameLayout
                android:id="@+id/daily_forecast_listContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/daily_forecast_listview_height">

                <ListView
                    android:id="@+id/daily_forecast_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/adapter_item_daily_forecast"/>

                <TextView
                    android:id="@+id/daily_forecast_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_daily_forecast"
                    android:visibility="gone"/>

            </FrameLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/current_last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/current_weather_fragment_margin"
            android:textSize="@dimen/xsmall_textSize"
            android:textColor="@color/textColorSecondary"
            android:text="@string/current_last_update_default_value"
            tools:text="Last updated: Apr 23, 2015 11:15 PM"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>