<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/tri_hour_forecast_row_padding"
    android:paddingBottom="@dimen/tri_hour_forecast_row_padding"

    app:useDefaultMargins="false"
    app:alignmentMode="alignMargins"
    app:columnOrderPreserved="false"
    app:columnCount="@integer/tri_hour_forecast_columnCount"
    app:orientation="horizontal">

    <TextView
        android:id="@+id/tri_hour_forecast_time"
        app:layout_row="0"
        app:layout_column="0"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"

        app:layout_gravity="center_vertical"
        app:layout_columnWeight=".25"

        android:textColor="@color/textColorPrimary"
        android:text="@string/tri_hour_forecast_time_default_value"
        tools:text="11:00 AM"/>

    <ImageView
        android:id="@+id/tri_hour_forecast_image"
        app:layout_row="0"
        app:layout_column="1"

        android:layout_width="@dimen/weather_image_size"
        android:layout_height="@dimen/weather_image_size"

        app:layout_gravity="center"
        app:layout_columnWeight=".25"

        android:contentDescription="@string/weather_image_contentDescription"
        android:src="@color/colorAccent"/>

    <TextView
        android:id="@+id/tri_hour_forecast_description"
        app:layout_row="0"
        app:layout_column="2"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"

        app:layout_gravity="center_vertical"
        app:layout_columnWeight=".4"

        android:textColor="@color/textColorSecondary"
        android:text="@string/tri_hour_forecast_description_default_value"
        tools:text="Scattered clouds"/>

    <TextView
        android:id="@+id/tri_hour_forecast_temp"
        app:layout_row="0"
        app:layout_column="3"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"

        app:layout_gravity="center_vertical"
        app:layout_columnWeight=".1"

        android:textColor="@color/textColorPrimary"
        android:text="@string/tri_hour_forecast_temp_default_value"
        tools:text="50"/>

</android.support.v7.widget.GridLayout>